clean up sysID/supervisor UI, add pump (WIP)

--- a/imgui.ini
+++ b/imgui.ini
@@ -9,8 +9,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Raw Image Capture]
-Pos=245,483
-Size=1088,533
+Pos=0,24
+Size=1920,992
 Collapsed=0
 DockId=0x0000000E,0
 
@@ -72,8 +72,8 @@ Size=485,474
 Collapsed=0
 
 [Window][Ctrl Setup]
-Pos=1500,24
-Size=420,992
+Pos=1442,24
+Size=478,992
 Collapsed=0
 DockId=0x00000010,0
 
@@ -99,9 +99,10 @@ Size=530,740
 Collapsed=0
 
 [Window][Ctrl Data]
-Pos=430,72
-Size=839,893
+Pos=680,47
+Size=689,992
 Collapsed=0
+DockId=0x00000012,0
 
 [Window][Stacked 1]
 Pos=671,397
@@ -115,12 +116,12 @@ Collapsed=0
 
 [Window][SysID Setup]
 Pos=0,24
-Size=1498,992
+Size=1440,992
 Collapsed=0
 DockId=0x0000000E,0
 
 [Window][SysID]
-Pos=572,255
+Pos=225,217
 Size=1138,672
 Collapsed=0
 
@@ -258,14 +259,15 @@ Column 2  Weight=1.4661
 Column 3  Weight=1.3383
 
 [Table][0xA9513BD8,4]
-Column 0  Weight=0.7722
-Column 1  Weight=1.3102
-Column 2  Weight=0.6941
-Column 3  Weight=1.2234
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+Column 3  Weight=1.0000
 
 [Docking][Data]
+DockNode          ID=0x00000012 Pos=680,47 Size=689,992 Selected=0xDB6ECE2B
 DockSpace         ID=0x09EF459F Window=0x9A404470 Pos=0,24 Size=1920,992 Split=X Selected=0x820FDA7D
-  DockNode        ID=0x00000007 Parent=0x09EF459F SizeRef=538,992 Split=X
+  DockNode        ID=0x00000007 Parent=0x09EF459F SizeRef=1440,992 Split=X
     DockNode      ID=0x00000001 Parent=0x00000007 SizeRef=243,992 Split=Y Selected=0x0764DB78
       DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=131,314 Selected=0x0764DB78
       DockNode    ID=0x00000004 Parent=0x00000001 SizeRef=131,676 Split=Y Selected=0x40C4A1A8
@@ -274,7 +276,7 @@ DockSpace         ID=0x09EF459F Window=0x9A404470 Pos=0,24 Size=1920,992 Split=X
     DockNode      ID=0x00000002 Parent=0x00000007 SizeRef=1167,992 Split=Y Selected=0x820FDA7D
       DockNode    ID=0x0000000D Parent=0x00000002 SizeRef=1472,457 Selected=0x7C819FC7
       DockNode    ID=0x0000000E Parent=0x00000002 SizeRef=1472,533 CentralNode=1 Selected=0x4E7AB692
-  DockNode        ID=0x00000008 Parent=0x09EF459F SizeRef=420,992 Split=Y Selected=0xB4128790
+  DockNode        ID=0x00000008 Parent=0x09EF459F SizeRef=478,992 Split=Y Selected=0xB4128790
     DockNode      ID=0x00000009 Parent=0x00000008 SizeRef=141,509 Selected=0xA1D9D0D3
     DockNode      ID=0x0000000A Parent=0x00000008 SizeRef=141,481 Split=Y Selected=0xB4128790
       DockNode    ID=0x0000000B Parent=0x0000000A SizeRef=553,198 Selected=0xB4128790
