impl pump gui, voltage/freq setters

--- a/config/setup.toml
+++ b/config/setup.toml
@@ -13,6 +13,7 @@ fontPath = "/root/.local/share/fonts/JetBrainsMono-1.0.2/ttf/JetBrainsMono-Mediu
 startImCap = false
 startImProc = false
 startImProcSetup = false
+startPumpSetup = false
 startCtrl = false
 startCtrlSetup = false
 startSysID = false
