--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpace]
 Pos=0,0
-Size=1920,1016
+Size=960,1016
 Collapsed=0
 
 [Window][Debug##Default]
@@ -72,7 +72,7 @@ Size=485,474
 Collapsed=0
 
 [Window][Ctrl Setup]
-Pos=1442,24
+Pos=482,24
 Size=478,992
 Collapsed=0
 DockId=0x00000010,0
@@ -122,6 +122,26 @@ DockId=0x0000000E,0
 [Window][SysID]
 Pos=225,217
 Size=1138,672
+Collapsed=0
+
+[Window][Example: Property editor]
+Pos=60,60
+Size=430,450
+Collapsed=0
+
+[Window][Example: Log]
+Pos=178,197
+Size=500,400
+Collapsed=0
+
+[Window][Example: Console]
+Pos=122,197
+Size=579,600
+Collapsed=0
+
+[Window][Pump Setup]
+Pos=478,144
+Size=287,276
 Collapsed=0
 
 [Table][0xC9935533,3]
@@ -263,8 +283,12 @@ Column 1  Weight=1.0000
 Column 2  Weight=1.0000
 Column 3  Weight=1.0000
 
+[Table][0xD0F0C6E3,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
 [Docking][Data]
-DockSpace         ID=0x09EF459F Window=0x9A404470 Pos=0,24 Size=1920,992 Split=X Selected=0x820FDA7D
+DockSpace         ID=0x09EF459F Window=0x9A404470 Pos=0,24 Size=960,992 Split=X Selected=0x820FDA7D
   DockNode        ID=0x00000007 Parent=0x09EF459F SizeRef=1440,992 Split=X
     DockNode      ID=0x00000001 Parent=0x00000007 SizeRef=243,992 Split=Y Selected=0x0764DB78
       DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=131,314 Selected=0x0764DB78
@@ -273,12 +297,12 @@ DockSpace         ID=0x09EF459F Window=0x9A404470 Pos=0,24 Size=1920,992 Split=X
         DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=131,342 Selected=0x7DA48818
     DockNode      ID=0x00000002 Parent=0x00000007 SizeRef=1167,992 Split=Y Selected=0x820FDA7D
       DockNode    ID=0x0000000D Parent=0x00000002 SizeRef=1472,457 Selected=0x7C819FC7
-      DockNode    ID=0x0000000E Parent=0x00000002 SizeRef=1472,533 CentralNode=1 Selected=0x820FDA7D
+      DockNode    ID=0x0000000E Parent=0x00000002 SizeRef=1472,533 CentralNode=1 Selected=0xB903C8C9
   DockNode        ID=0x00000008 Parent=0x09EF459F SizeRef=478,992 Split=Y Selected=0xB4128790
     DockNode      ID=0x00000009 Parent=0x00000008 SizeRef=141,509 Selected=0xA1D9D0D3
     DockNode      ID=0x0000000A Parent=0x00000008 SizeRef=141,481 Split=Y Selected=0xB4128790
       DockNode    ID=0x0000000B Parent=0x0000000A SizeRef=553,198 Selected=0xB4128790
       DockNode    ID=0x0000000C Parent=0x0000000A SizeRef=553,792 Split=Y Selected=0x41CC05F1
         DockNode  ID=0x0000000F Parent=0x0000000C SizeRef=416,425 Selected=0x41CC05F1
-        DockNode  ID=0x00000010 Parent=0x0000000C SizeRef=416,565 Selected=0x8A802616
+        DockNode  ID=0x00000010 Parent=0x0000000C SizeRef=416,565 Selected=0xBC797D6F
 
