--- a/config/setup.toml
+++ b/config/setup.toml
@@ -23,7 +23,7 @@ showDebug = false
 
 [cam]
 # select camera source [string: "Webcam"/"File"/"Andor"]
-source      = "Webcam"
+source      = "Andor"
 # if source = "File", the selected video file is used [string]
 file        = ""
 
@@ -83,7 +83,7 @@ confPath    = "/autoDMP/config/improc/"
 confSrc = "fromFile"
 # select template matching threshold: pxIntensity/255 (8-bit) [double]
 # 0.5 - 0.85 is a good range
-tmplThres   = 0.75
+tmplThres   = 0.88
 # number of channels to observe for improc
 numChans    = 3
 
@@ -91,11 +91,8 @@ numChans    = 3
 # path for control data
 confPath    = "/autoDMP/config/ctrl/"
 dataPath    = "/autoDMP/data/ctrl/"
-# status of supervisory controller [string: "disabled"/"sysID"/enabled"]
-status          = "disabled"
 # perform all steps but don't send control signal to pump [bool]
-dryRun          = true
-simMode         = true
+simMode         = false
 
 [postproc]
 # path for improc data
