--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpace]
 Pos=0,0
-Size=960,1016
+Size=1920,1016
 Collapsed=0
 
 [Window][Debug##Default]
@@ -9,20 +9,20 @@ Size=400,400
 Collapsed=0
 
 [Window][Raw Image Capture]
-Pos=0,24
-Size=1920,992
+Pos=107,984
+Size=1333,32
 Collapsed=0
 DockId=0x0000000E,0
 
 [Window][Processed Frame 0]
-Pos=0,674
-Size=243,342
+Pos=0,706
+Size=105,310
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Processed Frame 1]
-Pos=0,340
-Size=243,332
+Pos=0,414
+Size=105,290
 Collapsed=0
 DockId=0x00000005,0
 
@@ -40,13 +40,13 @@ DockId=0x00000009,0
 
 [Window][Processed Frame 2]
 Pos=0,24
-Size=243,314
+Size=105,388
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][ImProc Setup]
-Pos=1335,24
-Size=585,992
+Pos=1442,24
+Size=478,992
 Collapsed=0
 DockId=0x0000000F,0
 
@@ -56,8 +56,8 @@ Size=685,862
 Collapsed=0
 
 [Window][Proc Image Capture]
-Pos=245,24
-Size=1088,457
+Pos=107,24
+Size=1333,958
 Collapsed=0
 DockId=0x0000000D,0
 
@@ -72,10 +72,10 @@ Size=485,474
 Collapsed=0
 
 [Window][Ctrl Setup]
-Pos=482,24
-Size=478,992
+Pos=1442,24
+Size=478,657
 Collapsed=0
-DockId=0x00000010,0
+DockId=0x00000011,0
 
 [Window][ImPlot Demo]
 Pos=0,24
@@ -114,13 +114,12 @@ Size=388,148
 Collapsed=0
 
 [Window][SysID Setup]
-Pos=0,24
-Size=1440,992
+Pos=129,143
+Size=1195,610
 Collapsed=0
-DockId=0x0000000E,0
 
 [Window][SysID]
-Pos=225,217
+Pos=573,406
 Size=1138,672
 Collapsed=0
 
@@ -140,9 +139,10 @@ Size=579,600
 Collapsed=0
 
 [Window][Pump Setup]
-Pos=478,144
-Size=287,276
+Pos=1442,683
+Size=478,333
 Collapsed=0
+DockId=0x00000012,0
 
 [Table][0xC9935533,3]
 Column 0  Weight=0.5594
@@ -288,21 +288,23 @@ Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
 [Docking][Data]
-DockSpace         ID=0x09EF459F Window=0x9A404470 Pos=0,24 Size=960,992 Split=X Selected=0x820FDA7D
-  DockNode        ID=0x00000007 Parent=0x09EF459F SizeRef=1440,992 Split=X
-    DockNode      ID=0x00000001 Parent=0x00000007 SizeRef=243,992 Split=Y Selected=0x0764DB78
-      DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=131,314 Selected=0x0764DB78
-      DockNode    ID=0x00000004 Parent=0x00000001 SizeRef=131,676 Split=Y Selected=0x40C4A1A8
-        DockNode  ID=0x00000005 Parent=0x00000004 SizeRef=131,332 Selected=0x40C4A1A8
-        DockNode  ID=0x00000006 Parent=0x00000004 SizeRef=131,342 Selected=0x7DA48818
-    DockNode      ID=0x00000002 Parent=0x00000007 SizeRef=1167,992 Split=Y Selected=0x820FDA7D
-      DockNode    ID=0x0000000D Parent=0x00000002 SizeRef=1472,457 Selected=0x7C819FC7
-      DockNode    ID=0x0000000E Parent=0x00000002 SizeRef=1472,533 CentralNode=1 Selected=0xB903C8C9
-  DockNode        ID=0x00000008 Parent=0x09EF459F SizeRef=478,992 Split=Y Selected=0xB4128790
-    DockNode      ID=0x00000009 Parent=0x00000008 SizeRef=141,509 Selected=0xA1D9D0D3
-    DockNode      ID=0x0000000A Parent=0x00000008 SizeRef=141,481 Split=Y Selected=0xB4128790
-      DockNode    ID=0x0000000B Parent=0x0000000A SizeRef=553,198 Selected=0xB4128790
-      DockNode    ID=0x0000000C Parent=0x0000000A SizeRef=553,792 Split=Y Selected=0x41CC05F1
-        DockNode  ID=0x0000000F Parent=0x0000000C SizeRef=416,425 Selected=0x41CC05F1
-        DockNode  ID=0x00000010 Parent=0x0000000C SizeRef=416,565 Selected=0xBC797D6F
+DockSpace           ID=0x09EF459F Window=0x9A404470 Pos=0,24 Size=1920,992 Split=X Selected=0x820FDA7D
+  DockNode          ID=0x00000007 Parent=0x09EF459F SizeRef=1440,992 Split=X
+    DockNode        ID=0x00000001 Parent=0x00000007 SizeRef=105,992 Split=Y Selected=0x0764DB78
+      DockNode      ID=0x00000003 Parent=0x00000001 SizeRef=131,388 Selected=0x0764DB78
+      DockNode      ID=0x00000004 Parent=0x00000001 SizeRef=131,602 Split=Y Selected=0x40C4A1A8
+        DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=131,290 Selected=0x40C4A1A8
+        DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=131,310 Selected=0x7DA48818
+    DockNode        ID=0x00000002 Parent=0x00000007 SizeRef=1333,992 Split=Y Selected=0x820FDA7D
+      DockNode      ID=0x0000000D Parent=0x00000002 SizeRef=1472,958 Selected=0x7C819FC7
+      DockNode      ID=0x0000000E Parent=0x00000002 SizeRef=1472,32 CentralNode=1 Selected=0x820FDA7D
+  DockNode          ID=0x00000008 Parent=0x09EF459F SizeRef=478,992 Split=Y Selected=0xB4128790
+    DockNode        ID=0x00000009 Parent=0x00000008 SizeRef=141,509 Selected=0xA1D9D0D3
+    DockNode        ID=0x0000000A Parent=0x00000008 SizeRef=141,481 Split=Y Selected=0xB4128790
+      DockNode      ID=0x0000000B Parent=0x0000000A SizeRef=553,198 Selected=0xB4128790
+      DockNode      ID=0x0000000C Parent=0x0000000A SizeRef=553,792 Split=Y Selected=0x41CC05F1
+        DockNode    ID=0x0000000F Parent=0x0000000C SizeRef=416,425 Selected=0x41CC05F1
+        DockNode    ID=0x00000010 Parent=0x0000000C SizeRef=416,565 Split=Y Selected=0x8A802616
+          DockNode  ID=0x00000011 Parent=0x00000010 SizeRef=478,657 Selected=0x8A802616
+          DockNode  ID=0x00000012 Parent=0x00000010 SizeRef=478,333 Selected=0x97A5C2A5
 
