state0 -> state1 transition (tested on bench)

--- a/imgui.ini
+++ b/imgui.ini
@@ -59,7 +59,7 @@ Collapsed=0
 Pos=107,24
 Size=1333,958
 Collapsed=0
-DockId=0x0000000D,0
+DockId=0x00000012,0
 
 [Window][Dear ImGui Metrics/Debugger]
 Pos=600,179
@@ -99,9 +99,10 @@ Size=530,740
 Collapsed=0
 
 [Window][Ctrl Data]
-Pos=680,47
-Size=689,992
+Pos=565,24
+Size=875,958
 Collapsed=0
+DockId=0x00000014,0
 
 [Window][Stacked 1]
 Pos=671,397
@@ -142,7 +143,7 @@ Collapsed=0
 Pos=1442,683
 Size=478,333
 Collapsed=0
-DockId=0x00000012,0
+DockId=0x00000013,0
 
 [Table][0xC9935533,3]
 Column 0  Weight=0.5594
@@ -296,7 +297,9 @@ DockSpace           ID=0x09EF459F Window=0x9A404470 Pos=0,24 Size=1920,992 Split
         DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=131,290 Selected=0x40C4A1A8
         DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=131,310 Selected=0x7DA48818
     DockNode        ID=0x00000002 Parent=0x00000007 SizeRef=1333,992 Split=Y Selected=0x820FDA7D
-      DockNode      ID=0x0000000D Parent=0x00000002 SizeRef=1472,958 Selected=0x7C819FC7
+      DockNode      ID=0x0000000D Parent=0x00000002 SizeRef=1472,958 Split=X Selected=0x7C819FC7
+        DockNode    ID=0x00000012 Parent=0x0000000D SizeRef=456,958 Selected=0x7C819FC7
+        DockNode    ID=0x00000014 Parent=0x0000000D SizeRef=875,958 Selected=0xC0891660
       DockNode      ID=0x0000000E Parent=0x00000002 SizeRef=1472,32 CentralNode=1 Selected=0x820FDA7D
   DockNode          ID=0x00000008 Parent=0x09EF459F SizeRef=478,992 Split=Y Selected=0xB4128790
     DockNode        ID=0x00000009 Parent=0x00000008 SizeRef=141,509 Selected=0xA1D9D0D3
@@ -306,5 +309,5 @@ DockSpace           ID=0x09EF459F Window=0x9A404470 Pos=0,24 Size=1920,992 Split
         DockNode    ID=0x0000000F Parent=0x0000000C SizeRef=416,425 Selected=0x41CC05F1
         DockNode    ID=0x00000010 Parent=0x0000000C SizeRef=416,565 Split=Y Selected=0x8A802616
           DockNode  ID=0x00000011 Parent=0x00000010 SizeRef=478,657 Selected=0x8A802616
-          DockNode  ID=0x00000012 Parent=0x00000010 SizeRef=478,333 Selected=0x97A5C2A5
+          DockNode  ID=0x00000013 Parent=0x00000010 SizeRef=478,333 Selected=0x97A5C2A5
 
