--- a/imgui.ini
+++ b/imgui.ini
@@ -59,7 +59,7 @@ Collapsed=0
 Pos=107,24
 Size=1333,958
 Collapsed=0
-DockId=0x00000012,0
+DockId=0x00000015,0
 
 [Window][Dear ImGui Metrics/Debugger]
 Pos=600,179
@@ -115,14 +115,16 @@ Size=388,148
 Collapsed=0
 
 [Window][SysID Setup]
-Pos=129,143
-Size=1195,610
+Pos=556,24
+Size=884,958
 Collapsed=0
+DockId=0x00000016,0
 
 [Window][SysID]
-Pos=573,406
-Size=1138,672
+Pos=556,24
+Size=884,958
 Collapsed=0
+DockId=0x00000016,1
 
 [Window][Example: Property editor]
 Pos=60,60
@@ -140,8 +142,8 @@ Size=579,600
 Collapsed=0
 
 [Window][Pump Setup]
-Pos=1442,683
-Size=478,333
+Pos=1442,24
+Size=478,992
 Collapsed=0
 DockId=0x00000013,0
 
@@ -298,8 +300,10 @@ DockSpace           ID=0x09EF459F Window=0x9A404470 Pos=0,24 Size=1920,992 Split
         DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=131,310 Selected=0x7DA48818
     DockNode        ID=0x00000002 Parent=0x00000007 SizeRef=1333,992 Split=Y Selected=0x820FDA7D
       DockNode      ID=0x0000000D Parent=0x00000002 SizeRef=1472,958 Split=X Selected=0x7C819FC7
-        DockNode    ID=0x00000012 Parent=0x0000000D SizeRef=456,958 Selected=0x7C819FC7
-        DockNode    ID=0x00000014 Parent=0x0000000D SizeRef=875,958 Selected=0xDB6ECE2B
+        DockNode    ID=0x00000012 Parent=0x0000000D SizeRef=456,958 Split=X Selected=0x7C819FC7
+          DockNode  ID=0x00000015 Parent=0x00000012 SizeRef=447,958 Selected=0x7C819FC7
+          DockNode  ID=0x00000016 Parent=0x00000012 SizeRef=884,958 Selected=0x4E7AB692
+        DockNode    ID=0x00000014 Parent=0x0000000D SizeRef=875,958 Selected=0xC0891660
       DockNode      ID=0x0000000E Parent=0x00000002 SizeRef=1472,32 CentralNode=1 Selected=0x820FDA7D
   DockNode          ID=0x00000008 Parent=0x09EF459F SizeRef=478,992 Split=Y Selected=0xB4128790
     DockNode        ID=0x00000009 Parent=0x00000008 SizeRef=141,509 Selected=0xA1D9D0D3
