--- a/imgui.ini
+++ b/imgui.ini
@@ -305,7 +305,7 @@ DockSpace             ID=0x09EF459F Window=0x9A404470 Pos=0,24 Size=1920,992 Spl
           DockNode    ID=0x00000016 Parent=0x00000012 SizeRef=827,958 Split=Y Selected=0x4E7AB692
             DockNode  ID=0x00000017 Parent=0x00000016 SizeRef=884,326 Selected=0x4E7AB692
             DockNode  ID=0x00000018 Parent=0x00000016 SizeRef=884,630 Selected=0xEEEF5479
-        DockNode      ID=0x00000014 Parent=0x0000000D SizeRef=875,958 Selected=0xC0891660
+        DockNode      ID=0x00000014 Parent=0x0000000D SizeRef=875,958 Selected=0xDB6ECE2B
       DockNode        ID=0x0000000E Parent=0x00000002 SizeRef=1472,32 CentralNode=1 Selected=0x820FDA7D
   DockNode            ID=0x00000008 Parent=0x09EF459F SizeRef=478,992 Split=Y Selected=0xB4128790
     DockNode          ID=0x00000009 Parent=0x00000008 SizeRef=141,509 Selected=0xA1D9D0D3
