--- a/imgui.ini
+++ b/imgui.ini
@@ -59,7 +59,7 @@ Collapsed=0
 Pos=107,24
 Size=1333,958
 Collapsed=0
-DockId=0x00000015,0
+DockId=0x00000012,0
 
 [Window][Dear ImGui Metrics/Debugger]
 Pos=600,179
@@ -99,8 +99,8 @@ Size=530,740
 Collapsed=0
 
 [Window][Ctrl Data]
-Pos=565,24
-Size=875,958
+Pos=545,24
+Size=895,958
 Collapsed=0
 DockId=0x00000014,0
 
@@ -142,8 +142,8 @@ Size=579,600
 Collapsed=0
 
 [Window][Pump Setup]
-Pos=1442,683
-Size=478,333
+Pos=1442,24
+Size=478,992
 Collapsed=0
 DockId=0x00000013,0
 
@@ -291,29 +291,29 @@ Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
 [Docking][Data]
-DockSpace             ID=0x09EF459F Window=0x9A404470 Pos=0,24 Size=1920,992 Split=X Selected=0x820FDA7D
-  DockNode            ID=0x00000007 Parent=0x09EF459F SizeRef=1440,992 Split=X
-    DockNode          ID=0x00000001 Parent=0x00000007 SizeRef=105,992 Split=Y Selected=0x0764DB78
-      DockNode        ID=0x00000003 Parent=0x00000001 SizeRef=131,335 Selected=0x0764DB78
-      DockNode        ID=0x00000004 Parent=0x00000001 SizeRef=131,655 Split=Y Selected=0x40C4A1A8
-        DockNode      ID=0x00000005 Parent=0x00000004 SizeRef=131,335 Selected=0x40C4A1A8
-        DockNode      ID=0x00000006 Parent=0x00000004 SizeRef=131,318 Selected=0x7DA48818
-    DockNode          ID=0x00000002 Parent=0x00000007 SizeRef=1333,992 Split=Y Selected=0x820FDA7D
-      DockNode        ID=0x0000000D Parent=0x00000002 SizeRef=1472,958 Split=X Selected=0x7C819FC7
-        DockNode      ID=0x00000012 Parent=0x0000000D SizeRef=456,958 Split=X Selected=0x7C819FC7
-          DockNode    ID=0x00000015 Parent=0x00000012 SizeRef=504,958 Selected=0x7C819FC7
-          DockNode    ID=0x00000016 Parent=0x00000012 SizeRef=827,958 Split=Y Selected=0x4E7AB692
-            DockNode  ID=0x00000017 Parent=0x00000016 SizeRef=884,326 Selected=0x4E7AB692
-            DockNode  ID=0x00000018 Parent=0x00000016 SizeRef=884,630 Selected=0xEEEF5479
-        DockNode      ID=0x00000014 Parent=0x0000000D SizeRef=875,958 Selected=0xDB6ECE2B
-      DockNode        ID=0x0000000E Parent=0x00000002 SizeRef=1472,32 CentralNode=1 Selected=0x820FDA7D
-  DockNode            ID=0x00000008 Parent=0x09EF459F SizeRef=478,992 Split=Y Selected=0xB4128790
-    DockNode          ID=0x00000009 Parent=0x00000008 SizeRef=141,509 Selected=0xA1D9D0D3
-    DockNode          ID=0x0000000A Parent=0x00000008 SizeRef=141,481 Split=Y Selected=0xB4128790
-      DockNode        ID=0x0000000B Parent=0x0000000A SizeRef=553,198 Selected=0xB4128790
-      DockNode        ID=0x0000000C Parent=0x0000000A SizeRef=553,792 Split=Y Selected=0x41CC05F1
-        DockNode      ID=0x0000000F Parent=0x0000000C SizeRef=416,425 Selected=0x41CC05F1
-        DockNode      ID=0x00000010 Parent=0x0000000C SizeRef=416,565 Split=Y Selected=0x8A802616
-          DockNode    ID=0x00000011 Parent=0x00000010 SizeRef=478,657 Selected=0x8A802616
-          DockNode    ID=0x00000013 Parent=0x00000010 SizeRef=478,333 Selected=0x97A5C2A5
+DockSpace           ID=0x09EF459F Window=0x9A404470 Pos=0,24 Size=1920,992 Split=X Selected=0x820FDA7D
+  DockNode          ID=0x00000007 Parent=0x09EF459F SizeRef=1440,992 Split=X
+    DockNode        ID=0x00000001 Parent=0x00000007 SizeRef=105,992 Split=Y Selected=0x0764DB78
+      DockNode      ID=0x00000003 Parent=0x00000001 SizeRef=131,335 Selected=0x0764DB78
+      DockNode      ID=0x00000004 Parent=0x00000001 SizeRef=131,655 Split=Y Selected=0x40C4A1A8
+        DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=131,335 Selected=0x40C4A1A8
+        DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=131,318 Selected=0x7DA48818
+    DockNode        ID=0x00000002 Parent=0x00000007 SizeRef=1333,992 Split=Y Selected=0x820FDA7D
+      DockNode      ID=0x0000000D Parent=0x00000002 SizeRef=1472,958 Split=X Selected=0x7C819FC7
+        DockNode    ID=0x00000015 Parent=0x0000000D SizeRef=504,958 Split=X Selected=0x7C819FC7
+          DockNode  ID=0x00000012 Parent=0x00000015 SizeRef=436,958 Selected=0x7C819FC7
+          DockNode  ID=0x00000014 Parent=0x00000015 SizeRef=895,958 Selected=0xDB6ECE2B
+        DockNode    ID=0x00000016 Parent=0x0000000D SizeRef=827,958 Split=Y Selected=0x4E7AB692
+          DockNode  ID=0x00000017 Parent=0x00000016 SizeRef=884,326 Selected=0x4E7AB692
+          DockNode  ID=0x00000018 Parent=0x00000016 SizeRef=884,630 Selected=0xEEEF5479
+      DockNode      ID=0x0000000E Parent=0x00000002 SizeRef=1472,32 CentralNode=1 Selected=0x820FDA7D
+  DockNode          ID=0x00000008 Parent=0x09EF459F SizeRef=478,992 Split=Y Selected=0xB4128790
+    DockNode        ID=0x00000009 Parent=0x00000008 SizeRef=141,509 Selected=0xA1D9D0D3
+    DockNode        ID=0x0000000A Parent=0x00000008 SizeRef=141,481 Split=Y Selected=0xB4128790
+      DockNode      ID=0x0000000B Parent=0x0000000A SizeRef=553,198 Selected=0xB4128790
+      DockNode      ID=0x0000000C Parent=0x0000000A SizeRef=553,792 Split=Y Selected=0x41CC05F1
+        DockNode    ID=0x0000000F Parent=0x0000000C SizeRef=416,425 Selected=0x41CC05F1
+        DockNode    ID=0x00000010 Parent=0x0000000C SizeRef=416,565 Split=Y Selected=0x8A802616
+          DockNode  ID=0x00000011 Parent=0x00000010 SizeRef=478,657 Selected=0x8A802616
+          DockNode  ID=0x00000013 Parent=0x00000010 SizeRef=478,333 Selected=0x97A5C2A5
 
