moving towards more modular directory structure

--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -1,14 +1,25 @@
-# add_executable(autoDMP autoDMP.cpp)
-# target_link_libraries(robodrop PRIVATE util cam pump ctrl improc)
+add_executable(autoDMP "./src/main.cpp")
+target_link_libraries(autoDMP PRIVATE project_options project_warnings)
 
-add_executable(intro main.cpp)
-target_link_libraries(intro PRIVATE util cam gui imcap improc)
-# add_executable(testapp test.cpp)
-# target_link_libraries(testapp PRIVATE util)
+# includes (private includes require absolute paths)
+set(autoDMP_INCLUDE_DIR
+  "${CMAKE_CURRENT_SOURCE_DIR}/include"
+  CACHE STRING "")
+target_include_directories(autoDMP PRIVATE ${autoDMP_INCLUDE_DIR})
 
-target_include_directories(util
-  PRIVATE "${CMAKE_BINARY_DIR}/configured_files/include"
-)
+# # find dependencies (disabled for now since no dependencies need to be found)
+# set(autoDMP_DEPENDENCIES_CONFIGURED
+#     fmt
+#     CACHE STRING "")
+# foreach (dep ${autoDMP_DEPENDENCIES_CONFIGURED})
+#   find_package(${dep} CONFIG REQUIRED)
+# endforeach()
 
-# add_executable(sml_test sml_test.cpp)
-# target_link_libraries(sml_test PRIVATE util)
+# link dependencies
+set(autoDMP_LINKED_LIBRARIES util) # cam gui imcap improc)
+target_link_system_libraries(autoDMP PRIVATE ${autoDMP_LINKED_LIBRARIES})
+
+# tests
+if(FEATURE_TESTS)
+  add_subdirectory("./test")
+endif()
