--- a/imgui.ini
+++ b/imgui.ini
@@ -9,8 +9,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Raw Image Capture]
-Pos=107,984
-Size=1333,32
+Pos=0,24
+Size=1440,992
 Collapsed=0
 DockId=0x0000000E,0
 
@@ -57,7 +57,7 @@ Collapsed=0
 
 [Window][Proc Image Capture]
 Pos=107,24
-Size=1333,958
+Size=1813,958
 Collapsed=0
 DockId=0x00000012,0
 
@@ -73,7 +73,7 @@ Collapsed=0
 
 [Window][Ctrl Setup]
 Pos=1442,24
-Size=478,583
+Size=478,992
 Collapsed=0
 DockId=0x00000011,0
 
@@ -115,16 +115,16 @@ Size=388,148
 Collapsed=0
 
 [Window][SysID Setup]
-Pos=613,24
-Size=827,958
+Pos=0,24
+Size=1440,992
 Collapsed=0
-DockId=0x00000017,0
+DockId=0x0000000E,0
 
 [Window][SysID]
-Pos=613,352
-Size=827,630
+Pos=0,352
+Size=1440,630
 Collapsed=0
-DockId=0x00000018,0
+DockId=0x00000016,0
 
 [Window][Example: Property editor]
 Pos=60,60
@@ -303,9 +303,7 @@ DockSpace           ID=0x09EF459F Window=0x9A404470 Pos=0,24 Size=1920,992 Split
         DockNode    ID=0x00000015 Parent=0x0000000D SizeRef=504,958 Split=X Selected=0x7C819FC7
           DockNode  ID=0x00000012 Parent=0x00000015 SizeRef=436,958 Selected=0x7C819FC7
           DockNode  ID=0x00000014 Parent=0x00000015 SizeRef=895,958 Selected=0xDB6ECE2B
-        DockNode    ID=0x00000016 Parent=0x0000000D SizeRef=827,958 Split=Y Selected=0x4E7AB692
-          DockNode  ID=0x00000017 Parent=0x00000016 SizeRef=884,326 Selected=0x4E7AB692
-          DockNode  ID=0x00000018 Parent=0x00000016 SizeRef=884,630 Selected=0xEEEF5479
+        DockNode    ID=0x00000016 Parent=0x0000000D SizeRef=827,958 Selected=0x4E7AB692
       DockNode      ID=0x0000000E Parent=0x00000002 SizeRef=1472,32 CentralNode=1 Selected=0x820FDA7D
   DockNode          ID=0x00000008 Parent=0x09EF459F SizeRef=478,992 Split=Y Selected=0xB4128790
     DockNode        ID=0x00000009 Parent=0x00000008 SizeRef=141,509 Selected=0xA1D9D0D3
