--- a/imgui.ini
+++ b/imgui.ini
@@ -9,8 +9,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Raw Image Capture]
-Pos=0,984
-Size=1440,32
+Pos=0,24
+Size=1440,992
 Collapsed=0
 DockId=0x0000000E,0
 
@@ -73,7 +73,7 @@ Collapsed=0
 
 [Window][Ctrl Setup]
 Pos=1442,24
-Size=478,583
+Size=478,992
 Collapsed=0
 DockId=0x00000011,0
 
@@ -115,13 +115,13 @@ Size=388,148
 Collapsed=0
 
 [Window][SysID Setup]
-Pos=0,984
-Size=1440,32
+Pos=0,24
+Size=1440,992
 Collapsed=0
 DockId=0x0000000E,1
 
 [Window][SysID]
-Pos=0,24
+Pos=132,521
 Size=1440,958
 Collapsed=0
 DockId=0x00000016,0
@@ -142,10 +142,16 @@ Size=579,600
 Collapsed=0
 
 [Window][Pump Setup]
-Pos=1442,609
-Size=478,407
+Pos=1442,24
+Size=478,992
 Collapsed=0
 DockId=0x00000013,0
+
+[Window][SysId Setup]
+Pos=0,24
+Size=1440,992
+Collapsed=0
+DockId=0x0000000E,0
 
 [Table][0xC9935533,3]
 Column 0  Weight=0.5594
@@ -291,6 +297,7 @@ Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
 [Docking][Data]
+DockNode            ID=0x00000016 Pos=132,521 Size=1440,958 Selected=0xEEEF5479
 DockSpace           ID=0x09EF459F Window=0x9A404470 Pos=0,24 Size=1920,992 Split=X Selected=0x820FDA7D
   DockNode          ID=0x00000007 Parent=0x09EF459F SizeRef=1440,992 Split=X
     DockNode        ID=0x00000001 Parent=0x00000007 SizeRef=105,992 Split=Y Selected=0x0764DB78
@@ -300,11 +307,9 @@ DockSpace           ID=0x09EF459F Window=0x9A404470 Pos=0,24 Size=1920,992 Split
         DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=131,318 Selected=0x7DA48818
     DockNode        ID=0x00000002 Parent=0x00000007 SizeRef=1333,992 Split=Y Selected=0x820FDA7D
       DockNode      ID=0x0000000D Parent=0x00000002 SizeRef=1472,958 Split=X Selected=0x7C819FC7
-        DockNode    ID=0x00000015 Parent=0x0000000D SizeRef=504,958 Split=X Selected=0x7C819FC7
-          DockNode  ID=0x00000012 Parent=0x00000015 SizeRef=436,958 Selected=0x7C819FC7
-          DockNode  ID=0x00000014 Parent=0x00000015 SizeRef=895,958 Selected=0xDB6ECE2B
-        DockNode    ID=0x00000016 Parent=0x0000000D SizeRef=827,958 Selected=0xEEEF5479
-      DockNode      ID=0x0000000E Parent=0x00000002 SizeRef=1472,32 CentralNode=1 Selected=0x820FDA7D
+        DockNode    ID=0x00000012 Parent=0x0000000D SizeRef=436,958 Selected=0x7C819FC7
+        DockNode    ID=0x00000014 Parent=0x0000000D SizeRef=895,958 Selected=0xDB6ECE2B
+      DockNode      ID=0x0000000E Parent=0x00000002 SizeRef=1472,32 CentralNode=1 Selected=0xC8E63945
   DockNode          ID=0x00000008 Parent=0x09EF459F SizeRef=478,992 Split=Y Selected=0xB4128790
     DockNode        ID=0x00000009 Parent=0x00000008 SizeRef=141,509 Selected=0xA1D9D0D3
     DockNode        ID=0x0000000A Parent=0x00000008 SizeRef=141,481 Split=Y Selected=0xB4128790
