--- a/imgui.ini
+++ b/imgui.ini
@@ -121,10 +121,10 @@ Collapsed=0
 DockId=0x0000000E,1
 
 [Window][SysID]
-Pos=132,521
-Size=1440,958
+Pos=0,24
+Size=1440,992
 Collapsed=0
-DockId=0x00000016,0
+DockId=0x0000000E,1
 
 [Window][Example: Property editor]
 Pos=60,60
@@ -297,7 +297,6 @@ Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
 [Docking][Data]
-DockNode            ID=0x00000016 Pos=132,521 Size=1440,958 Selected=0xEEEF5479
 DockSpace           ID=0x09EF459F Window=0x9A404470 Pos=0,24 Size=1920,992 Split=X Selected=0x820FDA7D
   DockNode          ID=0x00000007 Parent=0x09EF459F SizeRef=1440,992 Split=X
     DockNode        ID=0x00000001 Parent=0x00000007 SizeRef=105,992 Split=Y Selected=0x0764DB78
