--- a/.devcontainer/Dockerfile.ubuntu-cpp
+++ b/.devcontainer/Dockerfile.ubuntu-cpp
@@ -99,6 +99,13 @@ RUN --mount=type=ssh git clone git@github.com:KevinHQChen/andor_sdk.git
 RUN apt-get install -y libusb-1.0-0
 # OpenGL, GLU, GLFW dependencies
 RUN apt-get install -y libxmu-dev libxi-dev libgl-dev libglfw3-dev libgl1-mesa-dev libglu1-mesa-dev
+# X server dependencies for cpp GUI libs
+RUN apt-get install -y --no-install-recommends libx11-dev libxft-dev libxext-dev libxrender-dev libxrandr-dev libxxf86vm-dev \
+# additional dependencies for opencv
+RUN apt-get install -y --no-install-recommends nasm libgtk2.0-dev bison gperf
+# additional dependencies for python
+RUN apt-get install -y --no-install-recommends gfortran libblas-dev liblapack-dev
+
 #run this manually in container: cd /andor_sdk && ./install_andor
 # restart PC after installing this (likely related to udev rules)
 
@@ -106,7 +113,7 @@ RUN apt-get install -y libxmu-dev libxi-dev libgl-dev libglfw3-dev libgl1-mesa-d
 # (by default, anything you run in Docker is done as superuser, so we won't need sudo)
 RUN wget --no-verbose --no-check-certificate "https://github.com/aminya/setup-cpp/releases/download/v0.19.0/setup_cpp_linux"
 RUN chmod +x setup_cpp_linux
-RUN ./setup_cpp_linux --compiler gcc \
+RUN ./setup_cpp_linux --compiler gcc \ # llvm would be nice, but vcpkg's ffmpeg cannot be built with it
     # build system tools
     --cmake true --ninja true --make true \
     # code analysis tools
@@ -119,13 +126,6 @@ RUN ./setup_cpp_linux --compiler gcc \
     --ccache true
     # documentation
     --doxygen true
-
-# install any additional dependencies
-RUN apt-get install -y --no-install-recommends \
-# X server dependencies for cpp GUI libs
-    libx11-dev libxft-dev libxext-dev libxrender-dev libxrandr-dev libxxf86vm-dev \
-# additional dependencies for opencv
-    nasm libgtk2.0-dev bison gperf
 
 # get fonts
 RUN wget -P ~/.local/share/fonts/ https://www.1001fonts.com/download/jetbrains-mono.zip \
