--- a/gui/CMakeLists.txt
+++ b/gui/CMakeLists.txt
@@ -4,7 +4,7 @@ add_library(gui
   # "./src/gui/windows/imcap_window.cpp"
   # "./src/gui/windows/improc_setup_window.cpp"
   # "./src/gui/windows/improc_window.cpp"
-  # "./src/gui/windows/pump_window.cpp"
+  "./src/gui/windows/pump_window.cpp"
   "./src/gui/windows/sysid_window.cpp")
   # "./src/gui/windows/ctrl_setup_window.cpp"
   # "./src/gui/windows/ctrl_window.cpp")
