--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpace]
 Pos=0,0
-Size=960,1016
+Size=1024,1088
 Collapsed=0
 
 [Window][Debug##Default]
@@ -72,8 +72,8 @@ Size=485,474
 Collapsed=0
 
 [Window][Ctrl Setup]
-Pos=482,24
-Size=478,992
+Pos=546,24
+Size=478,1064
 Collapsed=0
 DockId=0x00000011,0
 
@@ -142,16 +142,21 @@ Size=579,600
 Collapsed=0
 
 [Window][Pump Setup]
-Pos=1442,24
-Size=478,992
+Pos=546,24
+Size=478,1064
 Collapsed=0
 DockId=0x00000013,0
 
 [Window][SysId Setup]
 Pos=0,24
-Size=480,992
+Size=544,1064
 Collapsed=0
 DockId=0x0000000E,0
+
+[Window][Main window (title bar invisible)]
+Pos=0,0
+Size=1024,1088
+Collapsed=0
 
 [Table][0xC9935533,3]
 Column 0  Weight=0.5594
@@ -297,7 +302,7 @@ Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
 [Docking][Data]
-DockSpace           ID=0x09EF459F Window=0x9A404470 Pos=0,24 Size=960,992 Split=X Selected=0x820FDA7D
+DockSpace           ID=0x09EF459F Window=0x9A404470 Pos=0,21 Size=1024,1067 Split=X Selected=0x820FDA7D
   DockNode          ID=0x00000007 Parent=0x09EF459F SizeRef=1440,992 Split=X
     DockNode        ID=0x00000001 Parent=0x00000007 SizeRef=105,992 Split=Y Selected=0x0764DB78
       DockNode      ID=0x00000003 Parent=0x00000001 SizeRef=131,335 Selected=0x0764DB78
