--- a/ctrl/CMakeLists.txt
+++ b/ctrl/CMakeLists.txt
@@ -18,11 +18,11 @@ target_include_directories(ctrl PUBLIC
 # find dependencies
 find_package(Python 3.8 COMPONENTS Interpreter Development REQUIRED)
 # print python version
-# message(STATUS "Python version: ${Python_VERSION}")
-# message(STATUS "Python include dir: ${Python_INCLUDE_DIRS}")
-# message(STATUS "Python libraries: ${Python_LIBRARIES}")
-# message(STATUS "Python interpreter: ${Python_EXECUTABLE}")
-# message(STATUS "Python site packages: ${Python_SITELIB}")
+message(STATUS "Python version: ${Python_VERSION}")
+message(STATUS "Python include dir: ${Python_INCLUDE_DIRS}")
+message(STATUS "Python libraries: ${Python_LIBRARIES}")
+message(STATUS "Python interpreter: ${Python_EXECUTABLE}")
+message(STATUS "Python site packages: ${Python_SITELIB}")
 # if a python virtual environment does not exist, create it, update pip, and use it to install dependencies
 if(NOT EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/scripts/venv")
   execute_process(COMMAND ${Python_EXECUTABLE} -m venv venv WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/scripts)
@@ -32,6 +32,8 @@ if(NOT EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/scripts/venv")
 endif()
 # use virtual environment python interpreter
 set(Python_EXECUTABLE ${CMAKE_CURRENT_SOURCE_DIR}/scripts/venv/bin/python)
+
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/scripts/venv/bin/python)
 
 set(ctrl_DEPENDENCIES_CONFIGURED
   pybind11
@@ -43,9 +45,9 @@ foreach (dep ${ctrl_DEPENDENCIES_CONFIGURED})
   endif ()
 endforeach ()
 
-
 # link dependencies
 target_link_system_libraries(ctrl PRIVATE
+  ${Python_LIBRARY_RELEASE}
   pybind11::embed
   util
   improc
