implot fixes for sysidwindow

--- a/autoDMP.ini
+++ b/autoDMP.ini
@@ -4,7 +4,7 @@ Collapsed=0
 
 [Window][MainDockSpace]
 Pos=0,0
-Size=1024,1059
+Size=2048,1059
 Collapsed=0
 
 [Window][Debug##Default]
@@ -18,12 +18,12 @@ Collapsed=0
 DockId=0x00000002,0
 
 [Window][Dear ImGui Demo]
-Pos=650,20
+Pos=1011,152
 Size=550,680
 Collapsed=0
 
 [Window][ImPlot Demo]
-Pos=28,82
+Pos=180,181
 Size=600,750
 Collapsed=0
 
@@ -34,7 +34,7 @@ Collapsed=0
 
 [Window][StatusBar]
 Pos=0,1058
-Size=1024,32
+Size=2048,32
 Collapsed=0
 
 [Window][Raw Image Capture]
@@ -44,7 +44,7 @@ Collapsed=0
 DockId=0x00000005,0
 
 [Window][Ctrl Setup]
-Pos=670,21
+Pos=1694,21
 Size=354,1038
 Collapsed=0
 DockId=0x00000001,0
@@ -86,8 +86,14 @@ Size=2056,1082
 Collapsed=0
 
 [Window][SysId Setup]
+Pos=1344,21
+Size=348,1038
+Collapsed=0
+DockId=0x0000000A,0
+
+[Window][SysID]
 Pos=0,21
-Size=668,637
+Size=1342,1038
 Collapsed=0
 DockId=0x00000009,0
 
@@ -115,13 +121,13 @@ Column 2  Weight=1.0000
 Column 3  Weight=1.0000
 
 [Docking][Data]
-DockSpace         ID=0xC3C5E3D9 Window=0xDEDC5B90 Pos=0,21 Size=1024,1038 Split=X
+DockSpace         ID=0xC3C5E3D9 Window=0xDEDC5B90 Pos=0,21 Size=2048,1038 Split=X
   DockNode        ID=0x00000007 Parent=0xC3C5E3D9 SizeRef=1639,1038 Split=X
     DockNode      ID=0x00000005 Parent=0x00000007 SizeRef=1445,1067 Selected=0x820FDA7D
     DockNode      ID=0x00000006 Parent=0x00000007 SizeRef=601,1067 Split=X
-      DockNode    ID=0x00000003 Parent=0x00000006 SizeRef=668,1067 Split=Y Selected=0xC8E63945
-        DockNode  ID=0x00000009 Parent=0x00000003 SizeRef=1418,637 Selected=0xC8E63945
-        DockNode  ID=0x0000000A Parent=0x00000003 SizeRef=1418,399 CentralNode=1
+      DockNode    ID=0x00000003 Parent=0x00000006 SizeRef=668,1067 Split=X Selected=0xC8E63945
+        DockNode  ID=0x00000009 Parent=0x00000003 SizeRef=1342,1038 CentralNode=1 Selected=0xEEEF5479
+        DockNode  ID=0x0000000A Parent=0x00000003 SizeRef=348,1038 Selected=0xC8E63945
       DockNode    ID=0x00000004 Parent=0x00000006 SizeRef=354,1067 Split=Y Selected=0x8A802616
         DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=628,653 Selected=0x8A802616
         DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=628,383 Selected=0x97A5C2A5
