testing with PDMS T-junction

--- a/autoDMP.ini
+++ b/autoDMP.ini
@@ -4,7 +4,7 @@ Collapsed=0
 
 [Window][MainDockSpace]
 Pos=0,0
-Size=2048,1059
+Size=1920,987
 Collapsed=0
 
 [Window][Debug##Default]
@@ -13,7 +13,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Pump Setup]
-Size=32,37
+Pos=1613,578
+Size=307,409
 Collapsed=0
 DockId=0x00000002,0
 
@@ -33,19 +34,19 @@ Size=690,180
 Collapsed=0
 
 [Window][StatusBar]
-Pos=0,1058
-Size=2048,32
+Pos=0,986
+Size=1920,32
 Collapsed=0
 
 [Window][Raw Image Capture]
-Pos=0,21
-Size=990,1038
+Pos=0,524
+Size=1139,463
 Collapsed=0
-DockId=0x00000005,0
+DockId=0x00000010,0
 
 [Window][Ctrl Setup]
-Pos=1694,21
-Size=354,1038
+Pos=1613,21
+Size=307,555
 Collapsed=0
 DockId=0x00000001,0
 
@@ -55,8 +56,8 @@ Size=600,600
 Collapsed=0
 
 [Window][ImProc Setup]
-Pos=617,21
-Size=407,1038
+Pos=1532,21
+Size=388,966
 Collapsed=0
 DockId=0x00000008,0
 
@@ -66,36 +67,40 @@ Size=520,600
 Collapsed=0
 
 [Window][Processed Frame 0]
-Pos=60,60
-Size=102,52
+Pos=0,21
+Size=84,297
 Collapsed=0
+DockId=0x0000000D,0
 
 [Window][Processed Frame 1]
-Pos=60,60
-Size=2056,1082
+Pos=0,320
+Size=84,325
 Collapsed=0
+DockId=0x0000000E,0
 
 [Window][Processed Frame 2]
-Pos=60,60
-Size=2056,1082
+Pos=0,647
+Size=84,340
 Collapsed=0
+DockId=0x0000000C,0
 
 [Window][Proc Image Capture]
-Pos=60,60
-Size=2056,1082
+Pos=86,21
+Size=1053,932
 Collapsed=0
+DockId=0x0000000F,0
 
 [Window][SysId Setup]
-Pos=752,21
-Size=940,1038
+Pos=1141,21
+Size=470,966
 Collapsed=0
 DockId=0x0000000A,0
 
 [Window][SysID]
 Pos=0,21
-Size=750,1038
+Size=1139,501
 Collapsed=0
-DockId=0x00000009,0
+DockId=0x0000000F,0
 
 [Table][0x475FE97E,2]
 Column 0  Weight=1.0000
@@ -121,15 +126,21 @@ Column 2  Weight=1.0000
 Column 3  Weight=1.0000
 
 [Docking][Data]
-DockSpace         ID=0xC3C5E3D9 Window=0xDEDC5B90 Pos=0,21 Size=2048,1038 Split=X
-  DockNode        ID=0x00000007 Parent=0xC3C5E3D9 SizeRef=1639,1038 Split=X
-    DockNode      ID=0x00000005 Parent=0x00000007 SizeRef=1445,1067 Selected=0x820FDA7D
-    DockNode      ID=0x00000006 Parent=0x00000007 SizeRef=601,1067 Split=X
-      DockNode    ID=0x00000003 Parent=0x00000006 SizeRef=668,1067 Split=X Selected=0xC8E63945
-        DockNode  ID=0x00000009 Parent=0x00000003 SizeRef=750,1038 CentralNode=1 Selected=0xEEEF5479
-        DockNode  ID=0x0000000A Parent=0x00000003 SizeRef=940,1038 Selected=0xC8E63945
-      DockNode    ID=0x00000004 Parent=0x00000006 SizeRef=354,1067 Split=Y Selected=0x8A802616
-        DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=628,653 Selected=0x8A802616
-        DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=628,383 Selected=0x97A5C2A5
-  DockNode        ID=0x00000008 Parent=0xC3C5E3D9 SizeRef=407,1038 Selected=0x41CC05F1
+DockSpace           ID=0xC3C5E3D9 Window=0xDEDC5B90 Pos=0,21 Size=1920,966 Split=X
+  DockNode          ID=0x00000005 Parent=0xC3C5E3D9 SizeRef=84,966 Split=Y Selected=0x0764DB78
+    DockNode        ID=0x0000000B Parent=0x00000005 SizeRef=241,624 Split=Y Selected=0x7DA48818
+      DockNode      ID=0x0000000D Parent=0x0000000B SizeRef=241,297 Selected=0x7DA48818
+      DockNode      ID=0x0000000E Parent=0x0000000B SizeRef=241,325 Selected=0x40C4A1A8
+    DockNode        ID=0x0000000C Parent=0x00000005 SizeRef=241,340 Selected=0x0764DB78
+  DockNode          ID=0x00000006 Parent=0xC3C5E3D9 SizeRef=1834,966 Split=X
+    DockNode        ID=0x00000007 Parent=0x00000006 SizeRef=1444,1038 Split=X
+      DockNode      ID=0x00000003 Parent=0x00000007 SizeRef=1525,1067 Split=X Selected=0xC8E63945
+        DockNode    ID=0x00000009 Parent=0x00000003 SizeRef=1053,1038 Split=Y Selected=0x7C819FC7
+          DockNode  ID=0x0000000F Parent=0x00000009 SizeRef=1141,501 CentralNode=1 Selected=0xEEEF5479
+          DockNode  ID=0x00000010 Parent=0x00000009 SizeRef=1141,463 Selected=0x820FDA7D
+        DockNode    ID=0x0000000A Parent=0x00000003 SizeRef=470,1038 Selected=0xC8E63945
+      DockNode      ID=0x00000004 Parent=0x00000007 SizeRef=307,1067 Split=Y Selected=0x8A802616
+        DockNode    ID=0x00000001 Parent=0x00000004 SizeRef=628,555 Selected=0x8A802616
+        DockNode    ID=0x00000002 Parent=0x00000004 SizeRef=628,409 Selected=0x97A5C2A5
+    DockNode        ID=0x00000008 Parent=0x00000006 SizeRef=388,1038 Selected=0x41CC05F1
 
