--- a/config/setup.toml
+++ b/config/setup.toml
@@ -23,7 +23,7 @@ showDebug = false
 
 [cam]
 # select camera source [string: "Webcam"/"File"/"Andor"]
-source      = "Webcam"
+source      = "Andor"
 # if source = "File", the selected video file is used [string]
 file        = ""
 
@@ -63,7 +63,7 @@ BitDepth                    = "16 Bit"
 AOIBinning                  = "2x2"             # binning, intensity vs resolution
 [andor.int]
 # AOIHBin                     = 2                 # horizontal binning
-AOIWidth                    = 888 # 1776/2      # units in superpixels (540 superpixels * 2 pixels/superpixel)
+AOIWidth                    = 1776 # 888 # 1776/2      # units in superpixels (540 superpixels * 2 pixels/superpixel)
 AOILeft                     = 1                 # units in sensor pixels
 # AOIVBin                     = 2                 # vertical binning
 AOIHeight                   = 1760              # units in superpixels
