fixed imgui::end assert failure (caused by .ini file, should be fixed by enforcing a window layout)

--- a/autoDMP.ini
+++ b/autoDMP.ini
@@ -1,7 +1,3 @@
-[Window][DockSpace]
-Size=800,600
-Collapsed=0
-
 [Window][MainDockSpace]
 Pos=0,0
 Size=1920,987
@@ -12,135 +8,86 @@ Pos=60,60
 Size=400,400
 Collapsed=0
 
-[Window][Pump Setup]
-Pos=1613,21
-Size=307,966
-Collapsed=0
-DockId=0x00000002,0
-
-[Window][Dear ImGui Demo]
-Pos=1005,152
-Size=550,680
-Collapsed=0
-
-[Window][ImPlot Demo]
-Pos=180,181
-Size=600,750
-Collapsed=0
-
-[Window][Dear ImGui Debug Log]
-Pos=1033,222
-Size=690,180
-Collapsed=0
-
 [Window][StatusBar]
 Pos=0,986
 Size=1920,32
 Collapsed=0
 
 [Window][Raw Image Capture]
-Pos=0,654
-Size=1611,333
+Pos=177,955
+Size=898,32
 Collapsed=0
 DockId=0x00000010,0
 
-[Window][Ctrl Setup]
-Pos=1613,21
-Size=307,555
-Collapsed=0
-DockId=0x00000001,0
-
-[Window][Theme Tweaks]
-Pos=60,60
-Size=600,600
-Collapsed=0
-
 [Window][ImProc Setup]
-Pos=1532,21
-Size=388,966
-Collapsed=0
-DockId=0x00000008,0
-
-[Window][Example: Console]
 Pos=60,60
-Size=520,600
+Size=139,646
 Collapsed=0
 
 [Window][Processed Frame 0]
 Pos=0,21
-Size=84,297
+Size=175,290
 Collapsed=0
-DockId=0x0000000D,0
+DockId=0x00000006,0
 
 [Window][Processed Frame 1]
-Pos=0,320
-Size=84,325
+Pos=0,313
+Size=175,337
 Collapsed=0
-DockId=0x0000000E,0
+DockId=0x00000008,0
 
 [Window][Processed Frame 2]
-Pos=0,647
-Size=84,340
+Pos=0,652
+Size=175,335
 Collapsed=0
-DockId=0x0000000C,0
+DockId=0x00000009,0
 
 [Window][Proc Image Capture]
-Pos=86,21
-Size=1053,932
+Pos=177,21
+Size=898,932
 Collapsed=0
 DockId=0x0000000F,0
 
-[Window][SysId Setup]
-Pos=1141,21
-Size=470,966
+[Window][Pump Setup]
+Pos=1630,555
+Size=290,432
 Collapsed=0
 DockId=0x0000000A,0
 
-[Window][SysID]
-Pos=0,21
-Size=1139,501
+[Window][Ctrl Setup]
+Pos=1630,21
+Size=290,532
 Collapsed=0
-DockId=0x0000000F,0
+DockId=0x00000003,0
 
-[Table][0x475FE97E,2]
-Column 0  Weight=1.0000
-Column 1  Weight=1.0000
+[Window][SysId Setup]
+Pos=1077,21
+Size=551,966
+Collapsed=0
+DockId=0x0000000E,0
 
-[Table][0xC51D6398,5]
-Column 0  Weight=1.0000
-Column 1  Weight=1.0000
-Column 2  Weight=1.0000
-Column 3  Weight=1.0000
-Column 4  Weight=1.0000
-
-[Table][0x2279FEB5,4]
-Column 0  Weight=1.0000
-Column 1  Weight=1.0000
-Column 2  Weight=1.0000
-Column 3  Weight=1.0000
-
-[Table][0xA9513BD8,4]
-Column 0  Weight=1.0000
-Column 1  Weight=1.0000
-Column 2  Weight=1.0000
-Column 3  Weight=1.0000
+[Window][SysID]
+Pos=646,21
+Size=551,966
+Collapsed=0
+DockId=0x0000000D,0
 
 [Docking][Data]
-DockSpace           ID=0xC3C5E3D9 Window=0xDEDC5B90 Pos=0,21 Size=1920,966 Split=X
-  DockNode          ID=0x00000005 Parent=0xC3C5E3D9 SizeRef=84,966 Split=Y Selected=0x0764DB78
-    DockNode        ID=0x0000000B Parent=0x00000005 SizeRef=241,624 Split=Y Selected=0x7DA48818
-      DockNode      ID=0x0000000D Parent=0x0000000B SizeRef=241,297 Selected=0x7DA48818
-      DockNode      ID=0x0000000E Parent=0x0000000B SizeRef=241,325 Selected=0x40C4A1A8
-    DockNode        ID=0x0000000C Parent=0x00000005 SizeRef=241,340 Selected=0x0764DB78
-  DockNode          ID=0x00000006 Parent=0xC3C5E3D9 SizeRef=1834,966 Split=X
-    DockNode        ID=0x00000007 Parent=0x00000006 SizeRef=1444,1038 Split=X
-      DockNode      ID=0x00000003 Parent=0x00000007 SizeRef=1525,1067 Split=X Selected=0xC8E63945
-        DockNode    ID=0x00000009 Parent=0x00000003 SizeRef=1053,1038 Split=Y Selected=0x7C819FC7
-          DockNode  ID=0x0000000F Parent=0x00000009 SizeRef=1141,631 CentralNode=1 Selected=0xEEEF5479
-          DockNode  ID=0x00000010 Parent=0x00000009 SizeRef=1141,333 Selected=0x820FDA7D
-        DockNode    ID=0x0000000A Parent=0x00000003 SizeRef=470,1038 Selected=0xC8E63945
-      DockNode      ID=0x00000004 Parent=0x00000007 SizeRef=307,1067 Split=Y Selected=0x8A802616
-        DockNode    ID=0x00000001 Parent=0x00000004 SizeRef=628,555 Selected=0x8A802616
-        DockNode    ID=0x00000002 Parent=0x00000004 SizeRef=628,409 Selected=0x97A5C2A5
-    DockNode        ID=0x00000008 Parent=0x00000006 SizeRef=388,1038 Selected=0x41CC05F1
+DockSpace         ID=0xC3C5E3D9 Window=0xDEDC5B90 Pos=0,21 Size=1920,966 Split=X
+  DockNode        ID=0x00000004 Parent=0xC3C5E3D9 SizeRef=175,966 Split=Y Selected=0x7DA48818
+    DockNode      ID=0x00000006 Parent=0x00000004 SizeRef=957,290 Selected=0x7DA48818
+    DockNode      ID=0x00000007 Parent=0x00000004 SizeRef=957,674 Split=Y Selected=0x40C4A1A8
+      DockNode    ID=0x00000008 Parent=0x00000007 SizeRef=175,337 Selected=0x40C4A1A8
+      DockNode    ID=0x00000009 Parent=0x00000007 SizeRef=175,335 Selected=0x0764DB78
+  DockNode        ID=0x00000005 Parent=0xC3C5E3D9 SizeRef=1743,966 Split=X
+    DockNode      ID=0x00000001 Parent=0x00000005 SizeRef=1451,966 Split=X Selected=0x7C819FC7
+      DockNode    ID=0x0000000B Parent=0x00000001 SizeRef=898,966 Split=Y Selected=0x7C819FC7
+        DockNode  ID=0x0000000F Parent=0x0000000B SizeRef=431,932 Selected=0x7C819FC7
+        DockNode  ID=0x00000010 Parent=0x0000000B SizeRef=431,32 Selected=0x820FDA7D
+      DockNode    ID=0x0000000C Parent=0x00000001 SizeRef=551,966 Split=X Selected=0xEEEF5479
+        DockNode  ID=0x0000000D Parent=0x0000000C SizeRef=551,966 Selected=0xEEEF5479
+        DockNode  ID=0x0000000E Parent=0x0000000C SizeRef=429,966 Selected=0xC8E63945
+    DockNode      ID=0x00000002 Parent=0x00000005 SizeRef=290,966 Split=Y Selected=0x97A5C2A5
+      DockNode    ID=0x00000003 Parent=0x00000002 SizeRef=290,532 Selected=0x8A802616
+      DockNode    ID=0x0000000A Parent=0x00000002 SizeRef=290,432 CentralNode=1 Selected=0x97A5C2A5
 
