implementing imcap/improc with immvision

--- a/autoDMP.ini
+++ b/autoDMP.ini
@@ -1,6 +1,6 @@
 [Window][MainDockSpace]
 Pos=0,0
-Size=1920,987
+Size=2048,1059
 Collapsed=0
 
 [Window][Debug##Default]
@@ -9,13 +9,13 @@ Size=400,400
 Collapsed=0
 
 [Window][StatusBar]
-Pos=0,986
-Size=1920,32
+Pos=0,1058
+Size=2048,32
 Collapsed=0
 
 [Window][Raw Image Capture]
-Pos=177,955
-Size=898,32
+Pos=0,21
+Size=1451,1038
 Collapsed=0
 DockId=0x00000010,0
 
@@ -72,8 +72,18 @@ Size=551,966
 Collapsed=0
 DockId=0x0000000D,0
 
+[Window][Dear ImGui Demo]
+Pos=650,20
+Size=550,680
+Collapsed=0
+
+[Window][ImPlot Demo]
+Pos=50,50
+Size=600,750
+Collapsed=0
+
 [Docking][Data]
-DockSpace         ID=0xC3C5E3D9 Window=0xDEDC5B90 Pos=0,21 Size=1920,966 Split=X
+DockSpace         ID=0xC3C5E3D9 Window=0xDEDC5B90 Pos=0,21 Size=2048,1038 Split=X
   DockNode        ID=0x00000004 Parent=0xC3C5E3D9 SizeRef=175,966 Split=Y Selected=0x7DA48818
     DockNode      ID=0x00000006 Parent=0x00000004 SizeRef=957,290 Selected=0x7DA48818
     DockNode      ID=0x00000007 Parent=0x00000004 SizeRef=957,674 Split=Y Selected=0x40C4A1A8
