--- a/config/setup.toml
+++ b/config/setup.toml
@@ -23,7 +23,7 @@ showDebug = false
 
 [cam]
 # select camera source [string: "Webcam"/"File"/"Andor"]
-source      = "Andor"
+source      = "Webcam"
 # if source = "File", the selected video file is used [string]
 file        = ""
 
